[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://WorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Input/InputHandler.gd" type="Script" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -30 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "slide_forwards"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -30 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "win"

[sub_resource type="DynamicFont" id=6]
size = 85
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 85
font_data = ExtResource( 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35 )
fov = 40.0

[node name="GoalTetra" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30 )

[node name="GoalAnimation" type="AnimationPlayer" parent="GoalTetra"]
anims/RESET = SubResource( 2 )
anims/slide_forwards = SubResource( 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/win = SubResource( 5 )

[node name="InputHandler" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Debug" type="RichTextLabel" parent="."]
visible = false
margin_left = 18.0
margin_top = 18.0
margin_right = 1056.0
margin_bottom = 407.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.995524, 0, 0.094508, 0, 1, 0, -0.094508, 0, 0.995524, 11.1428, 0, 24.6045 )
spot_range = 88.737

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GameOver/VBoxContainer"]
margin_top = 848.0
margin_right = 1080.0
margin_bottom = 1048.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/normal_font = SubResource( 6 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 1052.0
margin_right = 1080.0
margin_bottom = 1072.0
custom_fonts/font = SubResource( 7 )
text = "Restart"

[connection signal="animation_finished" from="GoalTetra/GoalAnimation" to="." method="_on_GoalAnimation_animation_finished"]
[connection signal="game_input_occured" from="InputHandler" to="." method="_on_InputHandler_game_input_occured"]
[connection signal="pressed" from="GameOver/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
